Bug 654873 - ARM target (gcc 4.5.2 or later) should use built-in atomic function instead of arm-kuser. r=gal